--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ URI_ACCESS_MONGO = mongodb+srv://webreview:webreview123@cluster0.ydnrw.mongodb.n
 ACCESS_TOKEN_SERECT="OggyBE"
 
 PORT=3000
+
+GMAIL_SENDER_TK =topreview.contact@gmail.com
+GMAIL_SENDER_PASS=topreview@123
