--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "lint-staged": "^11.2.3",
     "morgan": "^1.10.0",
     "node-sass": "^6.0.1",
+    "nodemailer": "^6.7.0",
     "nodemon": "^2.0.14",
-    "prettier": "^2.4.1"
+    "prettier": "^2.4.1",
+    "random": "^3.0.6"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
