--- a/package.json
+++ b/package.json
@@ -19,23 +19,23 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@hapi/joi": "^17.1.1",
-    "dotenv": "^10.0.0",
     "husky": "^4.3.8",
     "lint-staged": "^11.2.3",
-    "morgan": "^1.10.0",
     "node-sass": "^6.0.1",
-    "nodemailer": "^6.7.0",
-    "nodemon": "^2.0.14",
-    "prettier": "^2.4.1",
-    "random": "^3.0.6"
+    "prettier": "^2.4.1"
   },
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "bcrypt": "^5.0.1",
     "dateformat": "^5.0.2",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.11",
-    "mongoose-slug-generator": "^1.0.4"
+    "mongoose-slug-generator": "^1.0.4",
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.7.0",
+    "nodemon": "^2.0.14",
+    "random": "^3.0.6"
   }
 }
