--- a/.env
+++ b/.env
@@ -6,3 +6,9 @@ PORT=3000
 
 GMAIL_SENDER_TK =topreview.contact@gmail.com
 GMAIL_SENDER_PASS=topreview@123
+
+
+# Cloudinary
+CLOUD_NAME = 'blogreview'
+API_KEY = '567645496322929'
+API_SECRET = 'EA9_XALLSeck8ROLQ1Nc9ZIMsQg'
