--- a/.env
+++ b/.env
@@ -4,6 +4,8 @@ ACCESS_TOKEN_SERECT="OggyBE"
 
 PORT=3000
 
+GMAIL_HOST=smtp.gmail.com
+GMAIL_PORT=587
 GMAIL_SENDER_TK =topreview.contact@gmail.com
 GMAIL_SENDER_PASS=topreview@123
 
